# Tuna

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Perft Debug Notebook.ipynb  README.md  benchmark_nnue.cpp  opening_book_format.ipynb  test_nnue_complex.cpp  test_nnue_incremental.cpp  test_tuning_params.cpp
.cmake/api/v1/reply/: cache-v2-5aeb509f7142f8bc13e4.json  cmakeFiles-v1-e10fcba27dd509ce8687.json  codemodel-v2-bb8d16c1b81e8c857a9a.json  index-2024-10-21T21-53-22-0539.json  target-Tuna-Debug-fa178236d2e67a83406e.json
Bitboard Chess.xcodeproj/: project.pbxproj
Bitboard Chess.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Bitboard Chess/src/: Bitboard.cpp  Bitboard.hpp  Board.cpp  Board.hpp  Data_structs.cpp  Data_structs.hpp  Evaluation.cpp  Evaluation.hpp  Opening_book.cpp  Opening_book.hpp  Ray_gen.cpp  Search.cpp  Search.hpp  Transposition_table.cpp  Transposition_table.hpp  Utility.cpp  Utility.hpp  Zobrist.cpp  depend.hpp  main.cpp
Resources/: opening_book.txt
Resources/good_nets/pre3/tuna-10/: log.txt
Resources/good_nets/pre3/tuna-100/: log.txt
Resources/good_nets/pre3/tuna-20/: log.txt
Resources/good_nets/pre3/tuna-30/: log.txt
Resources/good_nets/pre3/tuna-40/: log.txt
Resources/good_nets/pre3/tuna-50/: log.txt
Resources/good_nets/pre3/tuna-60/: log.txt
Resources/good_nets/pre3/tuna-70/: log.txt
Resources/good_nets/pre3/tuna-80/: log.txt
Resources/good_nets/pre3/tuna-90/: log.txt
Resources/good_nets/pre4/tuna-10/: log.txt
Resources/good_nets/pre4/tuna-20/: log.txt
Resources/good_nets/pre4/tuna-30/: log.txt
Resources/good_nets/pre4/tuna-40/: log.txt
Resources/good_nets/pre4/tuna-50/: log.txt
Resources/good_nets/pre4/tuna-60/: log.txt
SFML Chess/: Bitboard Chess-Info.plist
SFML Chess.xcodeproj/: project.pbxproj
SFML Chess.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/: UserInterfaceState.xcuserstate
SFML Chess.xcodeproj/xcuserdata/andy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SFML Chess.xcodeproj/xcuserdata/andy.xcuserdatad/xcschemes/: xcschememanagement.plist
SFML Chess/src/: Board.cpp  Data_structs.cpp  Data_structs.hpp  Search.cpp  Search.hpp  Utility.cpp  Utility.hpp  depend.hpp  main.cpp
scripts/: embed_network.py
src/: Bitboard.cpp  Bitboard.hpp  Board.cpp  Board.hpp  Data_structs.cpp  Data_structs.hpp  Engine.cpp  Engine.hpp  Evaluation.cpp  Evaluation.hpp  NNUE.cpp  NNUE.hpp  Opening_book.cpp  Opening_book.hpp  Ray_gen.cpp  Ray_gen.hpp  Search.cpp  Search.hpp  Thread.cpp  Thread.hpp  Time_handler.cpp  Time_handler.hpp  Transposition_table.cpp  Transposition_table.hpp  Tuning_parameters.cpp  Tuning_parameters.hpp  UCI.cpp  UCI.hpp  Utility.cpp  Utility.hpp  Zobrist.cpp  Zobrist.hpp  depend.hpp  main.cpp  tests.cpp  tests.hpp
test_data/: nnue_reference.txt
